kube/mallard/apps/networking/external-ingress/wigeon/syncthing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wigeon-syncthing
  namespace: networking
spec:
  ports:
  - name: syncthing
    port: 8384
    targetPort: 8384
  type: ExternalName
  externalName: wigeon.lan
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wigeon-syncthing
  namespace: networking
  # labels:
  #   app.kubernetes.io/name: syncthing
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800s"
spec:
  ingressClassName: nginx
  rules:
  - host: &host syncthing-w.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wigeon-syncthing
            port:
              number: 8384
  tls:
  - hosts:
    - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wigeon-syncthing-tailscale
  namespace: networking
  # labels:
  #   app.kubernetes.io/name: syncthing
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800s"
    external-dns.alpha.kubernetes.io/target: "100.72.100.101"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx-tailscale
  rules:
  - host: &host syncthing-w.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wigeon-syncthing
            port:
              number: 8384
  tls:
  - hosts:
    - *host
